# kcxy

./: .env  .gitignore  Cargo.toml  README.md
migrations/20171010084416_kcxy/: up.sql
src/: lib.rs
src/controller/: api.rs  home.rs  mod.rs  user.rs
src/model/: db.rs  mod.rs  pg.rs  user.rs
wapp/: README.md  index.html  package.json
wapp/config/: index.js
wapp/src/: App.vue  main.js
wapp/src/components/: NotFound.vue  User.vue
wapp/src/components/common/: Header.vue  catalog.vue  leftNav.vue
wapp/src/components/page/: Blog.vue  Home.vue
wapp/src/router/: index.js
webfront/: .gitignore  index.html  package-lock.json  package.json
